--- a/404.html
+++ b/404.html
@@ -14,10 +14,10 @@
     const urlGroup = ["/mousetermindtravel", "/mousetermindtravel/about", "/mousetermindtravel/contact", "/mousetermindtravel/walt-disney-world", "/mousetermindtravel/disneyland", "/mousetermindtravel/disney-cruise-line", "/mousetermindtravel/aulani-spa-resort"];
 
     if(urlGroup.indexOf(window.location.pathname) >= 0){
-        window.location.pathname = window.location.pathname;
+        window.location.replace = window.location.pathname;
     }
     else{
-        window.location.pathname = "/mousetermindtravel/not-found-error";
+        window.location.replace = "/mousetermindtravel/not-found-error";
     }
 </script>
 
