--- a/404.html
+++ b/404.html
@@ -14,10 +14,13 @@
     const urlGroup = ["/mousetermindtravel", "/mousetermindtravel/about", "/mousetermindtravel/contact", "/mousetermindtravel/walt-disney-world", "/mousetermindtravel/disneyland", "/mousetermindtravel/disney-cruise-line", "/mousetermindtravel/aulani-spa-resort"];
 
     const redirect = () => {
+        console.log("fired");
         if(urlGroup.indexOf(window.location.pathname) >= 0){
-        window.location.replace = window.location.pathname;
+            console.log("matched");
+            window.location.replace = window.location.pathname;
         }
         else{
+            console.log("404");
             window.location.replace = "/mousetermindtravel/not-found-error";
         }
     }
