--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         }
         else{
             console.log("404");
-            window.location.replace = "/mousetermindtravel/not-found-error";
+            window.location.replace = "/mousetermindtravel/";
         }
     }
 
